--- a/front/src/styles/css/UrlTable.css
+++ b/front/src/styles/css/UrlTable.css
@@ -37,6 +37,13 @@
         inline-size: 100%;
         overflow: hidden;
         color: #fff; }
+  .table-container .loading-screen {
+    display: flex;
+    height: 100vh;
+    align-items: center; }
+    .table-container .loading-screen h2 {
+      color: #fff;
+      font-size: 1.7em; }
 
 @media screen and (min-width: 300px) and (max-width: 720px) {
   .table-container {
