--- a/front/src/styles/sass/UrlTable.scss
+++ b/front/src/styles/sass/UrlTable.scss
@@ -46,6 +46,15 @@
             }
         }
     }
+    .loading-screen {
+        display: flex;
+        height: 100vh;
+        align-items: center;
+        h2 {
+            color: #fff;
+            font-size: 1.7em;
+        }
+    }
 }
 
 @media screen and (min-width:300px) and (max-width:720px) {
